# weakauras-codec-rs

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: code_style.yml  tests.yml
crates/ace_serialize/: Cargo.toml  README.md
crates/ace_serialize/fuzz/: Cargo.toml
crates/ace_serialize/fuzz/fuzz_targets/: roundtrip.rs
crates/ace_serialize/src/: error.rs  lib.rs  macros.rs
crates/ace_serialize/src/deserialization/: mod.rs  reader.rs
crates/ace_serialize/src/serialization/: mod.rs
crates/base64/: Cargo.toml  LICENSE  LICENSE-BSD-2-Clause  README.md
crates/base64/benches/: decoding.rs  encoding.rs
crates/base64/fuzz/: Cargo.toml
crates/base64/fuzz/fuzz_targets/: decode_scalar_and_avx2.rs  decode_scalar_and_neon.rs  decode_scalar_and_sse41.rs  encode_scalar_and_avx2.rs  encode_scalar_and_neon.rs  encode_scalar_and_ssse3.rs  roundtrip.rs
crates/base64/src/: byte_map.rs  error.rs  lib.rs  macros.rs
crates/base64/src/decode/: avx2.rs  mod.rs  scalar.rs  sse.rs  tests.rs
crates/base64/src/decode/arch/: mod.rs
crates/base64/src/decode/arch/aarch64/: mod.rs  neon.rs
crates/base64/src/decode/arch/wasm32/: mod.rs  simd128.rs
crates/base64/src/decode/arch/x86_64/: avx2.rs  mod.rs  sse41.rs
crates/base64/src/encode/: avx2.rs  mod.rs  scalar.rs  sse.rs  tests.rs
crates/base64/src/encode/arch/: mod.rs
crates/base64/src/encode/arch/aarch64/: mod.rs  neon.rs
crates/base64/src/encode/arch/wasm32/: mod.rs  simd128.rs
crates/base64/src/encode/arch/x86_64/: avx2.rs  mod.rs  ssse3.rs
crates/lib_compress/: Cargo.toml  README.md
crates/lib_compress/fuzz/: Cargo.toml
crates/lib_compress/fuzz/fuzz_targets/: decompression.rs
crates/lib_compress/src/: bitfield.rs  error.rs  lib.rs  lookup_table.rs  utils.rs
crates/lib_serialize/: Cargo.toml  README.md
crates/lib_serialize/fuzz/: Cargo.toml
crates/lib_serialize/fuzz/fuzz_targets/: roundtrip.rs
crates/lib_serialize/src/: error.rs  lib.rs  macros.rs  type_tag.rs
crates/lib_serialize/src/deserialization/: mod.rs  reader.rs
crates/lib_serialize/src/serialization/: mod.rs
crates/lua_value/: Cargo.toml  README.md
crates/lua_value/src/: error.rs  lib.rs
src/: error.rs  lib.rs
