[package]
name = "weakauras-codec-ace-serialize"
version = "0.1.0"
authors = ["Velithris"]
license = "MIT"
description = """
Provides routines for deserializing and serializing LuaValues
in a way compatible with a Lua library called AceSerialize.
"""
categories = ["encoding"]
keywords.workspace = true
repository.workspace = true
documentation = "https://docs.rs/weakauras-codec-ace-serialize"
exclude = ["/fuzz/"]
edition = "2024"
rust-version = "1.87"

[features]
default = []
lua-value-arbitrary = ["weakauras-codec-lua-value/arbitrary"]
lua-value-fnv = ["weakauras-codec-lua-value/fnv"]
lua-value-indexmap = ["weakauras-codec-lua-value/indexmap"]
serde = ["weakauras-codec-lua-value/serde"]

[dependencies]
weakauras-codec-lua-value = { version = "0.1.0", path = "../lua_value" }
itoa = "1.0.15"
ryu = "1.0.20"
