[package]
name = "weakauras-codec-base64"
version = "0.0.1"
authors = ["Velithris", "Wojciech Muła", "Alfred Klomp", "Daniel Lemire", "Nick Galbreath"]
license = "MIT AND BSD-2-Clause"
exclude = ["/benches/", "/fuzz/"]
edition = "2024"
rust-version = "1.87"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "decoding"
harness = false

[[bench]]
name = "encoding"
harness = false
