[package]
name = "weakauras-codec-base64"
version = "0.1.0"
authors = ["Velithris", "Wojciech Muła", "Alfred Klomp", "Daniel Lemire", "Nick Galbreath", "Matthieu Darbois"]
license = "MIT AND BSD-2-Clause"
description = """
Provides heavily optimized routines for decoding and encoding
base64 used for WeakAuras-compatible strings.
"""
categories = ["encoding"]
keywords.workspace = true
repository.workspace = true
documentation = "https://docs.rs/weakauras-codec-base64"
exclude = ["/benches/", "/fuzz/"]
edition = "2024"
rust-version = "1.87"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "decoding"
harness = false

[[bench]]
name = "encoding"
harness = false
