[package]
name = "weakauras-codec-lib-compress"
version = "0.1.0"
authors = ["Velithris", "jjsheets", "Galmok"]
license = "GPL-2.0-only"
description = """
Provides a routine for decompressing data
compressed by a Lua library called LibCompress.
"""
categories = ["compression"]
keywords.workspace = true
repository.workspace = true
documentation = "https://docs.rs/weakauras-codec-lib-compress"
exclude = ["/fuzz/"]
edition = "2024"
rust-version = "1.87"
