[package]
name = "weakauras-codec-lua-value"
version = "0.1.0"
authors = ["Velithris"]
license = "MIT"
description = "Provides types that behave similarly to Lua types."
keywords.workspace = true
repository.workspace = true
documentation = "https://docs.rs/weakauras-codec-lua-value"
edition = "2024"
rust-version = "1.87"

[features]
default = []
arbitrary = ["dep:arbitrary", "indexmap?/arbitrary"]
fnv = ["dep:fnv"]
indexmap = ["dep:indexmap"]
serde = ["dep:serde"]

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
fnv = { version = "1.0.7", optional = true }
indexmap = { version = "2.9.0", optional = true }
serde = { version = "1.0.219", optional = true }

[package.metadata.docs.rs]
features = ["arbitrary", "serde"]
